--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellpadding="20">
     <tr>
       <td>
-        <img src="C:\Users\Dell\Desktop\WebDevlopment\1.jpg" alt="hanan picture" width="200" height="200">
+        <img src="1.jpg" alt="hanan picture" width="200" height="200">
       </td>
       <td>
         <h1>Hanan Batarfi</h1>
