--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   </tfoot>
   </table>
-  <p> <a href="https://github.com/HananBatarfi/CV/blob/master/contact%20me.html">contact me</a> </p>
+  <p> <a href="contact me.html">contact me</a> </p>
 
 </body>
 
