--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   </tfoot>
   </table>
-  <p> <a href="contact me">contact me</a> </p>
+  <p> <a href="contact me">contact me.html</a> </p>
 
 </body>
 
