--- a/contact me.html
+++ b/contact me.html
@@ -46,7 +46,7 @@
       </fieldset>
   </form>
   <hr>
-  <p> <a href="https://github.com/HananBatarfi/CV/blob/master/index.html">Back to home</a> ?</p>
+  <p> <a href="index.html">Back to home</a> ?</p>
   <datalist class="">
 
   </datalist>
