--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </td>
       <td>
         <h1>Hanan Batarfi</h1>
-        <strong><em>greate women</em></strong>
+        <strong><em>Computer Sciense</em></strong>
         <p>master student at <a href="https://www.kau.edu.sa/Home.aspx"> king abdul aziz university</a></p>
 
       </td>
@@ -86,8 +86,10 @@
 
       </tr>
     </tbody>
-  <tfoot>
-
+ <tfoot>
+<tr>
+  this table shows the skills level
+</tr>
   </tfoot>
   </table>
   <p> <a href="contact me.html">contact me</a> </p>
