--- a/contact me.html
+++ b/contact me.html
@@ -21,7 +21,7 @@
     <fieldset>
        <legend>Send Message:</legend>
        <label>Select the type:</label>
-        <input list="type" name="browser">
+        <input list="type" name="type">
        <datalist id="type" >
            <option value="comment">
            <option value="question">
@@ -39,7 +39,7 @@
     <br>
     <br>
     <label>Your Message:</label>
-    <textarea name="name" rows="8" cols="80"></textarea>
+    <textarea name="Message" rows="8" cols="80"></textarea>
     <br>
     <br>
     <input type="submit" name="" value="send">
