--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
     </tbody>
  <tfoot>
 <tr>
-  this table shows the skills level
+<td>
+  this table shows the skills level</td>
 </tr>
   </tfoot>
   </table>
